// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "1.25s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "1.25s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "4s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "4s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "0.75s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "0.75s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "1.25s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "1.25s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "4s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "4s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  style={
    Object {
      "animationDuration": "0.75s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "0.75s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  style={
    Object {
      "animationDuration": "1.25s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner lucid-LoadingIcon-spinner-is-disabled"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "1.25s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  style={
    Object {
      "animationDuration": "4s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner lucid-LoadingIcon-spinner-is-disabled"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "4s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  style={
    Object {
      "animationDuration": "0.75s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner lucid-LoadingIcon-spinner-is-disabled"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "0.75s",
      }
    }
  />
</Icon>
`;
